<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <GVL Name="GVL" Id="{0033c46d-4b0c-47e7-af0d-9524e918bf98}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	
	//
	// Data Communication RS-232
	TxBufferEL								: ComBuffer;
	RxBufferEL								: ComBuffer;
	
			
	//
	// Data Communication Axis Mixers

	//
	// Mixer drive A // 16.09.2021 PF
	Axis_Mixer1 							: AXIS_REF;
	f_MID1_ActCurrent: REAL;
	f_MID1_ActTorque: REAL;
	in_MID1_ActAbsCurrent AT %I*: INT;
	in_MID1_ActMotorTemperature AT %I* :INT; // 220817 weiting added
	
	//
	// Mixer drive B // 16.09.2021 PF
	Axis_Mixer2 							: AXIS_REF;
	f_MID2_ActCurrent: REAL;
	f_MID2_ActTorque: REAL;
	in_MID2_ActAbsCurrent AT %I*: INT;
	in_MID2_ActMotorTemperature AT %I* :INT; // 220817 weiting added
	
	//
	// Control Input Speed
	fControlMixerPumpSpeed					: REAL; 
	fControlPeristalticPumpSpeed			: REAL; 
	fControlDosingPumpSpeed					: REAL; 
	fInputSpare1							: REAL; 
	fInputSpare2							: REAL; 
	
	//
	// Output Speed
	fConcretePumpSpeed						: REAL;
	fDosingPumpSpeed						: REAL;
	fOutputSpare1							: REAL;
	fOutputSpare2							: REAL;
	
	
	//
	//Hardware Input
	bSafetyIO						AT %I*	: BOOL;
	// bConcretePumpSafetyGridMounted	AT %I*	: BOOL;
	// bConcretePumpReady				AT %I*	: BOOL;
	// bConcretePumpFcError				AT %I*	: BOOL;
	bDosingPumpReady				AT %I*	: BOOL;
	bDosingPumpNoError				AT %I*	: BOOL;
	bControlResetSafety				AT %I*	: BOOL;
	bControlLaptop					AT %I*	: BOOL;
	bControlManual					AT %I*	: BOOL;	
	nControlMixerPumpOn				AT %I*	: BOOL; 
	nControlMixerPumpOff			AT %I*	: BOOL; 
	nControlConcretPumpOn			AT %I*	: BOOL; 
	nControlConcretPumpOff			AT %I*	: BOOL; 
	nControlDosingPumpOn			AT %I*	: BOOL; 
	nControlDosingPumpOff			AT %I*	: BOOL; 
	bInputSpare1					AT %I*	: BOOL;
		
	nControlMixerPumpSpeed			AT %I*	: INT; 
	// nControlPeristalticPumpSpeed	AT %I*	: INT; 
	nControlDosingPumpSpeed			AT %I*	: INT; 
	nInputSpare1					AT %I*	: INT; 
	nInputSpare2					AT %I*	: INT; 

	
	//
	//Hardware Output
	bResetSafety					AT %Q*	: BOOL;
	// bConcretePumpOn					AT %Q*	: BOOL;
	// bConcretePumpOff					AT %Q*	: BOOL;
	// bConcretePumpForwardOn			AT %Q*	: BOOL;
	// bConcretePumpBackwardOn			AT %Q*	: BOOL;
	bDosingPumpDosingHighLow		AT %Q*	: BOOL;
	bDosingPumpNoFastStop			AT %Q*	: BOOL;
	bDosingPumpDosingAmount			AT %Q*	: BOOL;
	bOutputSpare1					AT %Q*	: BOOL;
	bOutputSpare2					AT %Q*	: BOOL;
	bOutputSpare3					AT %Q*	: BOOL;
	bOutputSpare4					AT %Q*	: BOOL;
	bOutputSpare5					AT %Q*	: BOOL;
	bOutputSpare6					AT %Q*	: BOOL;
	bOutputSpare7					AT %Q*	: BOOL;
	bOutputSpare8					AT %Q*	: BOOL;
	
	// nConcretePumpSpeed				AT %Q*	: INT;
	nDosingPumpSpeed				AT %Q*	: INT;
	nOutputSpare1					AT %Q*	: INT;
	nOutputSpare2					AT %Q*	: INT;
	
	
	//
	//Hardware RS-232
	stIn_EL6001 					AT %I*	: EL6inData22B;	
	stOut_EL6001 					AT %Q*	: EL6outData22B;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>